youfull/objects/Genealogy_Field_Detail__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Column__c</fullName>
        <label>Column</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields_To_Map__c</fullName>
        <label>Fields To Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Genealogy Field Detail</label>
</CustomObject>